#37 Make shadow visible.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -114,6 +114,7 @@ ul {
     }
 .splitcells-net-window-menu-line-2 {
     height: 2.5em;
+    padding-top: .2em;
     }
 .net-splitcells-button {
 	margin-left: .0625em;
