#37 Generalize menu display style.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -23,6 +23,8 @@ html {
     }
 .splitcells-net-window-menu {
     min-height: 4.75em;
+    display: flex;
+    flex-direction: column;
     }
 .splitcells-net-background-window {
     flex:auto;
