#37 Generalize line class.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.default.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.default.css
@@ -16,6 +16,11 @@ footer {
 .net-splitcells-website-column-background-1 {
     order: 1;
 }
+.splitcells-net-line {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
 .menu h3 {
     padding-left: .25em;
 }
