--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -81,6 +81,7 @@ ul {
 	/* For overlays use 2000000000 <= index < 2147483647. */
 	z-index: 1000000000;
 	min-height: .25em;
+	min-width: .25em;
 	}
 .Button {
 	display: inline-block;
