#54 Add flowing text font to list text.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -47,6 +47,7 @@ mjx-container {
 	box-sizing: inherit; /* Let other css overwrite this attribute if they want. */
 }
 ul {
+    font-family: var(--text-flowing-font);
     list-style-type: none;
     padding-left: 0;
     margin-top: 0;
