--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
@@ -2,6 +2,9 @@
 :target {
    background-color: var(--background-color-priority-0) !important;
 }
+html {
+    font-family: var(--text-font-family);
+}
 pre {
     background-color: var(--background-color-priority-2);
     padding-left: 1em;
@@ -195,6 +198,7 @@ a.NonStandard {
 a {
 	text-decoration: none;
 	font-weight: bold;
+	font-family: var(--text-font-family);
     color: var(--foreground-color-priority-0);
 	}
 .paragraph a,
