--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/theme.white.variables.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/theme.white.variables.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 :root {
     --text-flowing-font: Palatino, Palatino Linotype, Palatino LT STD, Book Antiqua, Georgia, serif;
+    --text-font-family: Arial, Helvetica, sans-serif;
 
     --column-standard-width:40em;
 	--foreground-color-structural-guide:#000000;
