--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -256,6 +256,10 @@ h4 {
 	font-weight: bold;
 	margin-top: 3em;
 	margin-bottom: 2em;
+    padding-top: .5em;
+    padding-right: 1em;
+    padding-bottom: .5em;
+    padding-left: 1em;
 	}
 .chapter .heading {
 	margin-left: .2em;
