--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -261,6 +261,10 @@ h4 {
     padding-bottom: .5em;
     padding-left: 1em;
 	}
+.net-splitcells-component-priority-1 .heading {
+    background-color: var(--background-color-selected-priority-1);
+    color: var(--foreground-color-selected-priority-1);
+    }
 .chapter .heading {
 	margin-left: .2em;
 	font-size: 125%;
