--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
@@ -177,9 +177,14 @@ ol.table-of-content > li.table-of-content:before {
 	background: repeating-linear-gradient(45deg, var(--background-color-priority-4), var(--background-color-priority-4) 1em, var(--background-color-priority-3) 1em, var(--background-color-priority-3) 2em);
 }
 .net-splitcells-component-priority-1 {
-    background-color: var(--background-color-selected-priority-1);
-	color: var(--foreground-color-selected-priority-1);
+    background-color: var(--background-color-priority-1);
+	color: var(--foreground-color-priority-1);
 }
+.net-splitcells-component-priority-1 .heading,
+.net-splitcells-component-priority-1 h2 {
+    background-color: var(--background-color-priority-0);
+    color: var(--foreground-color-priority-0);
+    }
 .MainButton:hover, .net-splitcells-component-priority-3:hover {
 	background-color: var(--background-color-selected-priority-3);
 	color: var(--foreground-color-selected-priority-3);
