--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -148,8 +148,11 @@ body {
 	padding: 0px;
 	/* Ensures that px can be used in child elements, if required.
 	 * EM should always preferred over px, because it's mostly about text.
+	 *
+	 * 16 px seems to be the default size.
+	 * https://developer.mozilla.org/en-US/docs/Web/CSS/font-size
 	 */
-	font-size: 18px;
+	font-size: 16px;
 	}
 .Borderless {
 	border: none;
