--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -4,7 +4,7 @@
   In other words grow in one direction and fille the other one.
 - Use names with namespaces.
 */
-.beginningOfContent {
+main {
     background-size: 100%;
     background-repeat: no-repeat;
     background-image:url('/net/splitcells/martins/avots/website//images/license.standard/white.background.blog.discovery.0.jpg');
