--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.default.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.default.css
@@ -48,7 +48,7 @@ footer {
         visibility: hidden !important;
         display: none !important;
         }
-    .beginningOfContent {
+    .main {
         background-image: none;
         }
     .MainButton_S {
@@ -114,7 +114,7 @@ footer {
 		display: none;
         visibility: hidden:
     	}
-    .beginningOfContent {
+    .main {
         background-image: none;
         }
     .MainButton_S {
