#37 Remove background_not_important.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
@@ -91,7 +91,7 @@ main {
 *.text_standrad_very_low_priority {
 	color: var(--foreground-color-priority-6);
 	}
-*.background_not_important {
+main {
 	background-color: var(--background-color-priority-7);
 	}
 .VeryLightBorder {
