--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.default.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.default.css
@@ -88,7 +88,7 @@ footer {
     .content {
         padding-left: .25em !important;
         }
-    .mainElement {
+    main {
         width: 100% !important;
         margin: 0 auto;
         display: flex;
@@ -151,7 +151,7 @@ footer {
         visibility: hidden !important;
         display: none !important;
         }
-    .mainElement {
+    main {
         width: 100% !important;
         }
     .menu {
