#37 Remove mainElement_Container.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.default.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.default.css
@@ -185,7 +185,7 @@ footer {
     	}
 	}
 @media (min-width: 59em) {
-    .mainElement_Container {
+    main {
         display: flex;
         flex-direction: row;
         visibility: inherit;
@@ -204,7 +204,7 @@ footer {
     }
 @media (max-width: 59em) and (min-width: 53.25em) {
     /* TODO (max-width: 59em) should be (max-width: 57.5em) but is not working.*/
-    .mainElement_Container {
+    .main {
         display: flex;
         flex-direction: row;
         }
