#37 Remove css class topElement.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.default.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.default.css
@@ -163,7 +163,7 @@ footer {
         display: block;/*!important*/
         font-size: 1.375em;
         }
-    .topElement {
+    main {
         font-size: 1em;
         }
     .optional_structural_guide {
