Hide error link by default.
Only show error link, if errors are found.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -17,6 +17,8 @@ pre {
 	}
 .net-splitcells-website-hidden-by-default {
     /* We hide errors by default and only show them via Javascript. */
+    visibility: hidden;
+    display: none;
     }
 .splitcells-net-title-logo {
     text-align: center;
