#37 Standardize css class name prefix.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.column.main.fullscreen.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.column.main.fullscreen.css
@@ -1,8 +1,8 @@
 .net-splitcells-website-content-column {
     width: 100% !important;
 }
-.column_0 {
-	width: 100% !important;
+.net-splitcells-content-main {
+    width: 100% !important;
 }
 .column_1 {
 	width: 100% !important;
