--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/den.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/den.css
@@ -21,7 +21,8 @@ ul.net-splitcells-den-perspective li:last-child {
       height: 1em;
       display:inline-block;
    }*/
-li.net-splitcells-den-perspective {
+li.net-splitcells-den-perspective,
+li {
    border-left: 1px solid rgb(100,100,100);
    padding-left: .5em;
    }
