Make padding on first level smaller in lists.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -10,6 +10,9 @@ main {
     background-image:url('/net/splitcells/martins/avots/website//images/license.standard/white.background.blog.discovery.0.jpg');
 }
 ol {
+    padding-left: 1em;
+    }
+ol > ol {
     padding-left: 2em;
     }
 pre {
