#58 Remove stripped background of paragraph in math formulas.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
@@ -226,6 +226,11 @@ a {
 .IndexPostHeader {
 	box-shadow: 0em 0.1em 0.2em -.2em var(--shadow-color-priority-2);
 }
+article p mjx-container {
+    background-color: var(--background-color-priority-1);
+    /* The following makes the container as big as the containing paragraph. */
+    margin-right: -0.25em !important;
+    }
 article .paragraph,
 article p {
 	/* Use px in order to prevent bug on webkit. */
@@ -237,7 +242,6 @@ article p {
     var(--paragraph-background-color-priority-1-b) 56px
 
     );
-	/*background-size: 100% 2.8em;*/
 	padding-left: .25em;
 	padding-right: .25em;
 }
