--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
@@ -37,6 +37,10 @@ ol > ol {
 .Standard_p2 .Standard_highlighted {
     background-color: var(--background-color-priority-1);
     }
+.net-splitcells-content-column .heading {
+    background-color: var(--background-color-priority-0);
+    color: var(--foreground-color-priority-0);
+    }
 .net-splitcells-component-priority-2 .heading,
 .net-splitcells-component-priority-2 h2 {
     background-color: var(--background-color-priority-1);
