--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -21,6 +21,25 @@ pre {
 * {
 	word-break: normal;
 	}
+.net-splitcells-button-inline {
+	margin-left: .0625em;
+    margin-right: .0625em;
+    font-weight: bold;
+    line-height: 1.5em;
+    vertical-align: middle;
+    padding-left: .5em;
+    padding-right: .5em;
+    height: 2em;
+    margin-top: 0em;
+    text-align: center;
+    vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-indent: 0em;
+    margin-left: .0625em;
+    margin-right: .0625em;
+	}
 .net-splitcells-space-filler {
 	flex: auto;
 	}
