--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
@@ -16,6 +16,22 @@ ol {
 ol > ol {
     border-left: 1px solid rgb(100,100,100);
     }
+.net-splitcells-button:hover {
+	background-color: var(--background-color-priority-1);
+	color: var(--foreground-color-priority-1);
+	}
+.net-splitcells-button-inline:hover {
+	background-color: var(--background-color-selected-priority-1);
+	color: var(--foreground-color-selected-priority-1);
+	}
+.net-splitcells-component-priority-3 > .net-splitcells-button-inline:hover {
+	background-color: var(--background-color-selected-priority-1);
+    color: var(--foreground-color-selected-priority-1);
+	}
+.net-splitcells-component-priority-3 > .net-splitcells-button-inline {
+	background-color: var(--background-color-priority-2);
+        color: var(--foreground-color-priority-2);
+	}
 .net-splitcells-quote-display > .label {
     background-image: linear-gradient(var(--paragraph-background-color-priority-1-a) 1.4em, var(--paragraph-background-color-priority-1-b) 1.4em);
     width: 100%;
@@ -172,7 +188,8 @@ main {
 	color: var(--foreground-color-priority-3);
 	box-shadow: 0em 0.1em 0.1em -0.1em var(--shadow-color-priority-2);
 }
-.premature {
+.premature,
+.net-splitcells-premature {
 	background: repeating-linear-gradient(45deg, var(--background-color-priority-4), var(--background-color-priority-4) 1em, var(--background-color-priority-3) 1em, var(--background-color-priority-3) 2em);
 }
 .net-splitcells-content-main,
@@ -185,13 +202,9 @@ main {
     background-color: var(--background-color-priority-0);
     color: var(--foreground-color-priority-0);
     }
-.MainButton:hover, .net-splitcells-component-priority-3:hover {
+.MainButton:hover {
 	background-color: var(--background-color-selected-priority-3);
 	color: var(--foreground-color-selected-priority-3);
-}
-.net-splitcells-component-priority-4:hover {
-	background-color: var(--background-color-selected-priority-4);
-	color: var(--foreground-color-selected-priority-4);
 }
 .MainButtonDescription:hover {
 	background-color: var(--background-color-selected-priority-0);
