#37 Unify class naming.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.default.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.default.css
@@ -116,7 +116,7 @@ footer {
     	}
     }
 @media (max-width: 53.25em) {
-	.minimal-not {
+	.net-splitcells-minimal-not {
 		display: none;
         visibility: hidden:
     	}
