#37 Use styling to class for page title.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -276,9 +276,12 @@ td.TextCell {
 	font-size: 125%;
 	font-weight: bold;
 	}
-h1 {
-    padding-left: .4em;
-    }
+.splitcells-net-line-title {
+	font-size: 1.75em;
+	text-align: left;
+	padding: 0.1em;
+	font-weight: bold;
+	}
 h2 {
     font-size: 125%;
 	font-weight: bold;
