--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
@@ -192,6 +192,10 @@ main {
 .net-splitcells-premature {
 	background: repeating-linear-gradient(45deg, var(--background-color-priority-4), var(--background-color-priority-4) 1em, var(--background-color-priority-3) 1em, var(--background-color-priority-3) 2em);
 }
+.net-splitcells-component-priority-0 {
+    background-color: var(--background-color-priority-0);
+	color: var(--foreground-color-priority-0);
+}
 .net-splitcells-content-main,
 .net-splitcells-component-priority-1 {
     background-color: var(--background-color-priority-1);
